base/src/test/resources/failure/tyck/issue659-01.aya.txt
In file $FILE:1:31 ->

  1 | def why {A : Type} : A -> A => \ {x} => x
                                     ^--------^

Error: Cannot check `λ {x} ⇒ x`
       against Pi type `Π (_ : A) → A`
       because explicitnesses do not match
What are you doing?
